<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CheatsActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/backbtn"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gametitle"
            android:layout_toRightOf="@+id/backbtn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/cheattablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_added"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_code"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assets_cheat"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pro (AR DS)"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cheatListview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assetsCheatListview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/editorLayout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        app:contentPadding="20dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:rippleColor="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cheateditor"
            android:gravity="top"
            android:background="@null"
            android:layout_above="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:text="@string/save"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>